--- a/future.html
+++ b/future.html
@@ -20,9 +20,9 @@
 	</div>
 	<header>
 	<div class="container">
-		<h1><a href="coba.html">RORO JONGGRANG</h1>
+		<h1><a href="index.html">RORO JONGGRANG</h1>
 		<ul>
-			<li><a href="coba.html">Home</li>
+			<li><a href="index.html">Home</li>
 			<li><a href="about-me.html">About Me</li>
 			<li class="active"><a href="future.html">Future</li>
 			<li><a href="tample.html">Tample</li>
